# ml-hits-3-lab

./: .gitignore  docker-compose.yml  ml-hits-3-lab.code-workspace
backend/: Dockerfile  README.md  pom.xml
backend/src/main/java/hits/ml/lab3/: Application.java
backend/src/main/java/hits/ml/lab3/config/: WebSocketConfig.java
backend/src/main/java/hits/ml/lab3/controller/: TranslateWebSocketHandler.java
backend/src/main/java/hits/ml/lab3/service/: TranslatorService.java
frontend/: Dockerfile  README.md  app.js  index.html  styles.css
ml/: README.md  model.py  pyproject.toml
ml/akkadian_nmt/: data_prep.py  decode.py  evaluate.py  logging_utils.py  normalize.py  train.py
ml/configs/: baseline.yaml  exp1_norm.yaml  exp2_full_seed13.yaml  exp3_full_seed42.yaml
ml/notebooks/: 01_eda.ipynb  colab_train.ipynb
