[project]
name = "akkadian-nmt"
version = "0.1.0"
description = "Akkadian (Old Assyrian) to English NMT — Kaggle Deep Past Initiative, HW3 ML part"
authors = [{ name = "Kirill Malahov" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.4)",
    "transformers (>=4.46)",
    "datasets (>=3.0)",
    "accelerate (>=1.0)",
    "sacrebleu (>=2.4)",
    "pandas (>=2.2)",
    "fire (>=0.7)",
    "wandb (>=0.18)",
    "pyyaml (>=6.0)",
    "huggingface-hub (>=0.26)",
]

[project.optional-dependencies]
eval = ["unbabel-comet (>=2.2)"]

[tool.poetry]
packages = [{ include = "akkadian_nmt" }]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
